--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             </div>
             <div class="social_icons">
                 <div class="icon"><a href="https://www.instagram.com" target="_blank"> <i class="uil uil-instagram"></i></a></div>
-                <div class="icon"><a href="https://www.Linkedin.com"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/nitiraj-singh-rathore-541a73153/"><i class="uil uil-linkedin-alt"></i></a></div>
                 <div class="icon"><a href="https://www.hackerrank.com"><i class="uil uil-dribbble"></i></a></div>
-                <div class="icon"><a href="https://www.github.com"><i class="uil uil-github-alt"></i></a></div>
+                <div class="icon"><a href="https://github.com/Nitiraj7"><i class="uil uil-github-alt"></i></a></div>
             </div>
           </div>
           <div class="featured-image">
@@ -241,9 +241,9 @@
         </div>
         <div class="footer-social-icons">
             <div class="icon"><a href="https://www.instagram.com" target="_blank"> <i class="uil uil-instagram"></i></a></div>
-            <div class="icon"><a href="https://www.Linkedin.com"><i class="uil uil-linkedin-alt"></i></a></div>
+            <div class="icon"><a href="https://www.linkedin.com/in/nitiraj-singh-rathore-541a73153/"><i class="uil uil-linkedin-alt"></i></a></div>
             <div class="icon"><a href="https://www.hackerrank.com"><i class="uil uil-dribbble"></i></a></div>
-            <div class="icon"><a href="https://www.github.com"><i class="uil uil-github-alt"></i></a></div>
+            <div class="icon"><a href="https://github.com/Nitiraj7"><i class="uil uil-github-alt"></i></a></div>
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Nitiraj Singh Rathore</a> - All rights reserved</p>
